Added a talk to planned ones

--- a/myTalks.html
+++ b/myTalks.html
@@ -73,6 +73,8 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
+    <li>Alma Talent Testausautomaatio, August 25th, 2021, Helsinki, Finland.
+      <br>TALK: A Year in Test Automation Continuously Improving</li>
     <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
     <li>tbd Conference, October 18-21, 2021, Online.
