--- a/myTalks.html
+++ b/myTalks.html
@@ -73,6 +73,8 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
+    <li>A customer organization, July 9th, 2021, Online.
+    <br>TALK: Software Testing Ask Anyone Anything</li>
     <li><a href="https://koulutus.almatalent.fi/testausautomaatio/">Alma Talent Testausautomaatio</a>, August 25th, 2021, Helsinki, Finland.
       <br>TALK: A Year in Test Automation Continuously Improving</li>
     <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
@@ -112,6 +114,14 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
 &nbsp; Keynote Speaker at QA Talks (4.6.2021), Online<br />
+<br />
+
+<i>Setting Up Website Hosted on Github</i><br />
+&nbsp; Trainer at Mimmit Koodaa training (14.6.2021), Online<br />
+&nbsp; Trainer at Mimmit Koodaa training (21.6.2021), Online<br />
+&nbsp; Trainer at Mimmit Koodaa training (2.8.2021), Online<br />
+&nbsp; Trainer at Mimmit Koodaa training (9.8.2021), Online<br />
+&nbsp; Trainer at Mimmit Koodaa training (16.8.2021), Online<br />
 <br />
 
 <i>Breaking Illusions with Testing</i><br />
