--- a/new/index.html
+++ b/new/index.html
@@ -18,7 +18,7 @@
 
 <link rel="stylesheet" href="style.css">
 <script src="https://kit.fontawesome.com/d13ab97070.js" crossorigin="anonymous"></script>
-<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+<link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg"/>
 </head>
 <body>
 <div class="container">
