--- a/new/index.html
+++ b/new/index.html
@@ -46,7 +46,6 @@
 
 <div class="flags-container">
 <h4>Spoken at events in 27 countries</h4>
-
   <img class="flag" height="20" src="img/flags/4x3/fi.svg" alt="Finland">
   <img class="flag" height="20" src="img/flags/4x3/se.svg" alt="Sweden">
   <img class="flag" height="20" src="img/flags/4x3/no.svg" alt="Norway">
@@ -74,6 +73,8 @@
   <img class="flag" height="20" src="img/flags/4x3/nz.svg" alt="New Zealand">
   <img class="flag" height="20" src="img/flags/4x3/lk.svg" alt="Sri Lanka">
   <img class="flag" height="20" src="img/flags/4x3/my.svg" alt="Malaysia">
+  <br><a class="blacktext" href="https://maaretp.com/myTalks.html">[All Delivered Talks, Workshops and Trainings]</a>
+
 </div>
 
 <div class="awards-container">
@@ -88,6 +89,7 @@
 <a href="http://exploratorytesting.xyz"><img class="books" src="img/Book-ET.png"></a>
 <a href="https://ensembleprogramming.xyz"><img class="books" src="img/Book-Ensemble.png"></a>
 <a href="http://strongstylepairprogramming.xyz"><img class="books" src="img/Book-Pairing.png"></a>
+<br><a class="blacktext" href="https://maaretp.com/myArticles.html">[All publications]</a>
 </div>
 
 <div class="causes-container">
