Update talks page

--- a/myTalks.html
+++ b/myTalks.html
@@ -51,7 +51,7 @@
     <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
     <img class="flag" height="20" src="flags/4x3/nz.svg" alt="New Zealand">
     <img class="flag" height="20" src="flags/4x3/lk.svg" alt="Sri Lanka">
-    <img class="flag" height="20" scr="flags/4x3/my.svg" alt="Malaysia">
+    <img class="flag" height="20" src="flags/4x3/my.svg" alt="Malaysia">
 
 <p><p>
 
