--- a/myArticles.html
+++ b/myArticles.html
@@ -127,7 +127,7 @@
 <h2>Articles others write about me</h2>
 
   <ul>
-    <li><a href="https://saucelabs.com/blog/women-in-testing-maaret-pyhajarvi">Women in Testing: Maaret Pyhäjärvi</a>
+    <li><a href="https://saucelabs.com/blog/women-in-testing-maaret-pyhajarvi">Saucelabs on Women in Testing: Maaret Pyhäjärvi</a>
     <li><a href="https://www.aalto.fi/en/news/you-can-change-the-world-in-this-field-two-technology-alumni-talk-about-their-careers">You Can Change the World in This Field</a>, Aalto University News June 8th 2020</li>
     <li><a href="https://mimmitkoodaa.ohjelmistoebusiness.fi/blogi/tyon-voi-raataloida-itselleen-sopivaksi/">Työn voi räätälöidä itselleen sopivaksi</a>, spring 2020</li>
     <li><a href="https://www.tivi.fi/uutiset/maaret-pyhaharvi-uskoo-etta-tekoaly-korvaa-nopeammin-koodaajia-kuin-testaajia-testaajien-tekemaan-suuntaan-ollaan-jo-menossa/610716c1-8d2f-46de-b1c8-4a96ecfe49c4">Maaret Pyhäjärvi uskoo että tekoäly korvaa nopeammin koodaajia kuin testaajia: "Testaajien tekemään suuntaan ollaan jo menossa"</a> in Tivi August 30th, 2019</li>
