Updated alt texts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta charset="utf-8"/>
 <meta property="og:title" content="Maaret Pyhäjärvi">
 <meta property="og:url" content="https://maaretp.com/">
 <meta property="og:description" name="description" content="">
@@ -20,9 +19,10 @@
 <script src="https://kit.fontawesome.com/d13ab97070.js" crossorigin="anonymous"></script>
 <link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg"/>
 </head>
+
 <body>
 <div class="container">
-<img class="headshot" src="img/header.jpg">
+<img class="headshot" src="img/header.jpg" alt="Maaret Pyhäjärvi, speaking at DDD Europe">
 <div class="name">Maaret Pyhäjärvi</div>
 <div class="punchline">Tester. (Polyglot) Programmer. Speaker. Author. Mentor. </div>
 <div class="support">
@@ -79,16 +79,16 @@
 
 <div class="awards-container">
 <h4>Awards</h4>
-<img class="awards" src="img/eurostar-testing-excellence-award.jpg">
-<img class="awards" src="img/agiletestingdays-miatpp-award.jpg">
-<img class="awards" src="img/tivi-ict-influencers.jpg">
+<img class="awards" src="img/eurostar-testing-excellence-award.jpg" alt="EuroSTAR Testing Excellence Award 2020">
+<img class="awards" src="img/agiletestingdays-miatpp-award.jpg" alt="Agile Testing Days MIATPP Award 2016">
+<img class="awards" src="img/tivi-ict-influencers.jpg" alt="ICT 100 influencers list 2019 and 2020">
 </div>
 
 <div class="book-container">
 <h4>Books</h4>
-<a href="http://exploratorytesting.xyz"><img class="books" src="img/Book-ET.png"></a>
-<a href="https://ensembleprogramming.xyz"><img class="books" src="img/Book-Ensemble.png"></a>
-<a href="http://strongstylepairprogramming.xyz"><img class="books" src="img/Book-Pairing.png"></a>
+<a href="http://exploratorytesting.xyz"><img class="books" src="img/Book-ET.png" alt="Exploratory Testing book"></a>
+<a href="https://ensembleprogramming.xyz"><img class="books" src="img/Book-Ensemble.png" alt="Ensemble Programming Guidebook"></a>
+<a href="http://strongstylepairprogramming.xyz"><img class="books" src="img/Book-Pairing.png" alt="Strong Style Pair Programming book"></a>
 <br><a class="blacktext" href="https://maaretp.com/myArticles.html">[All publications]</a>
 </div>
 
