--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
 <a href="https://awesometesters.tech"><img class="causes" src="img/awesometesters.jpg" alt="Awesome Testers"></a>
 <a href="https://www.facebook.com/groups/ohjelmistotestausry"><img class="causes" src="img/ohjelmistotestausry.png" alt="Software Testing Finland ry, non-profit"></a>
 <a href="https://mimmitkoodaa.ohjelmistoebusiness.fi"><img class="causes" src="img/mimmitkoodaa.png" alt="Mimmit Koodaa"></a>
+</div>
 </body>
 </html>
