--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <a href="https://twitter.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Twitter profile"><i class="fab fa-twitter-square"></i></a>
 <a href="https://facebook.com/MaaretPy/" target="_blank" rel="noopener noreferrer me" title="Facebook page"><i class="fab fa-facebook-square"></i></a>
 <a href="https://fi.linkedin.com/in/maaret" target="_blank" rel="noopener noreferrer me" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+<a href="https://www.polywork.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Polywork profile"><i class="fas fa-bookmark"></i></a>
 <a href="https://anchor.fm/exploratory-testing"><i class="fas fa-podcast"></i></a>
 <a href="https://visible-quality.blogspot.fi"><i class="fab fa-blogger"></i></a>
 <a href="https://dev.to/maaretp"><i class="fab fa-dev"></i></a>
