--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 <a href="https://facebook.com/MaaretPy/" target="_blank" rel="noopener noreferrer me" title="Facebook page"><i class="fab fa-facebook-square"></i></a>
 <a href="https://fi.linkedin.com/in/maaret" target="_blank" rel="noopener noreferrer me" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
 <a href="https://www.polywork.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Polywork profile"><i class="fas fa-bookmark"></i></a>
-<a href="https://anchor.fm/exploratory-testing"><i class="fas fa-podcast"></i></a>
-<a href="https://visible-quality.blogspot.fi"><i class="fab fa-blogger"></i></a>
-<a href="https://dev.to/maaretp"><i class="fab fa-dev"></i></a>
-<a href="https://www.slideshare.net/maaretp"><i class="fab fa-slideshare"></i></a>
-<a href="https://github.com/maaretp"><i class="fab fa-github-square"></i></a>
+<a href="https://anchor.fm/exploratory-testing" target="_blank" rel="noopener noreferrer me"><i class="fas fa-podcast"></i></a>
+<a href="https://visible-quality.blogspot.fi" target="_blank" rel="noopener noreferrer me"><i class="fab fa-blogger"></i></a>
+<a href="https://dev.to/maaretp" target="_blank" rel="noopener noreferrer me"><i class="fab fa-dev"></i></a>
+<a href="https://www.slideshare.net/maaretp" target="_blank" rel="noopener noreferrer me"><i class="fab fa-slideshare"></i></a>
+<a href="https://github.com/maaretp" target="_blank" rel="noopener noreferrer me"><i class="fab fa-github-square"></i></a>
 <a href="https://www.youtube.com/channel/UCrTlIKuIS-LmRk-aAbcxTKg" target="_blank" rel="noopener noreferrer me" title="YouTube channel"><i class="fab fa-youtube-square"></i></a>
 </div>
 </div>
