--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="container">
 <img class="headshot" src="img/header.jpg" alt="Maaret Pyhäjärvi, speaking at DDD Europe">
 <div class="name">Maaret Pyhäjärvi</div>
-<div class="punchline">Tester. (Polyglot) Programmer. Speaker. Author. Mentor. </div>
+<div class="punchline">Practitioner. Tester. (Polyglot) Programmer. Speaker. Author. Mentor. </div>
 <div class="support">
 <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#02A4D3', 'F1F61M6QO');kofiwidget2.draw();</script>
 </div>
