--- a/myTalks.html
+++ b/myTalks.html
@@ -25,33 +25,33 @@
 <h1>Speaking Engagements</h1>
 
 <h4>Spoken at events in 27 countries</h4>
-    <img class="flag" height="20" src="flags/4x3/fi.svg" alt="Finland ">
-    <img class="flag" height="20" src="flags/4x3/se.svg" alt="Sweden">
-    <img class="flag" height="20" src="flags/4x3/no.svg" alt="Norway">
-    <img class="flag" height="20" src="flags/4x3/dk.svg" alt="Denmark">
-    <img class="flag" height="20" src="flags/4x3/lv.svg" alt="Latvia">
-    <img class="flag" height="20" src="flags/4x3/ee.svg" alt="Estonia">
-    <img class="flag" height="20" src="flags/4x3/us.svg" alt="US">
-    <img class="flag" height="20" src="flags/4x3/ch.svg" alt="Switzerland">
-    <img class="flag" height="20" src="flags/4x3/hu.svg" alt="Hungary">
-    <img class="flag" height="20" src="flags/4x3/fr.svg" alt="France">
-    <img class="flag" height="20" src="flags/4x3/be.svg" alt="Belgium">
-    <img class="flag" height="20" src="flags/4x3/hr.svg" alt="Croatia">
-    <img class="flag" height="20" src="flags/4x3/md.svg" alt="Moldova">
-    <img class="flag" height="20" src="flags/4x3/pt.svg" alt="Portugal">
-    <img class="flag" height="20" src="flags/4x3/pl.svg" alt="Poland">
-    <img class="flag" height="20" src="flags/4x3/ro.svg" alt="Romania">
-    <img class="flag" height="20" src="flags/4x3/rs.svg" alt="Serbia">
-    <img class="flag" height="20" src="flags/4x3/de.svg" alt="Germany">
-    <img class="flag" height="20" src="flags/4x3/es.svg" alt="Spain">
-    <img class="flag" height="20" src="flags/4x3/gb.svg" alt="United Kingdom">
-    <img class="flag" height="20" src="flags/4x3/bg.svg" alt="Bulgaria">
-    <img class="flag" height="20" src="flags/4x3/in.svg" alt="India">
-    <img class="flag" height="20" src="flags/4x3/au.svg" alt="Australia">
-    <img class="flag" height="20" src="flags/4x3/tr.svg" alt="Turkey">
-    <img class="flag" height="20" src="flags/4x3/nz.svg" alt="New Zealand">
-    <img class="flag" height="20" src="flags/4x3/lk.svg" alt="Sri Lanka">
-    <img class="flag" height="20" src="flags/4x3/my.svg" alt="Malaysia">
+    <img class="flag" height="20" src="img/flags/4x3/fi.svg" alt="Finland ">
+    <img class="flag" height="20" src="img/flags/4x3/se.svg" alt="Sweden">
+    <img class="flag" height="20" src="img/flags/4x3/no.svg" alt="Norway">
+    <img class="flag" height="20" src="img/flags/4x3/dk.svg" alt="Denmark">
+    <img class="flag" height="20" src="img/flags/4x3/lv.svg" alt="Latvia">
+    <img class="flag" height="20" src="img/flags/4x3/ee.svg" alt="Estonia">
+    <img class="flag" height="20" src="img/flags/4x3/us.svg" alt="US">
+    <img class="flag" height="20" src="img/flags/4x3/ch.svg" alt="Switzerland">
+    <img class="flag" height="20" src="img/flags/4x3/hu.svg" alt="Hungary">
+    <img class="flag" height="20" src="img/flags/4x3/fr.svg" alt="France">
+    <img class="flag" height="20" src="img/flags/4x3/be.svg" alt="Belgium">
+    <img class="flag" height="20" src="img/flags/4x3/hr.svg" alt="Croatia">
+    <img class="flag" height="20" src="img/flags/4x3/md.svg" alt="Moldova">
+    <img class="flag" height="20" src="img/flags/4x3/pt.svg" alt="Portugal">
+    <img class="flag" height="20" src="img/flags/4x3/pl.svg" alt="Poland">
+    <img class="flag" height="20" src="img/flags/4x3/ro.svg" alt="Romania">
+    <img class="flag" height="20" src="img/flags/4x3/rs.svg" alt="Serbia">
+    <img class="flag" height="20" src="img/flags/4x3/de.svg" alt="Germany">
+    <img class="flag" height="20" src="img/flags/4x3/es.svg" alt="Spain">
+    <img class="flag" height="20" src="img/flags/4x3/gb.svg" alt="United Kingdom">
+    <img class="flag" height="20" src="img/flags/4x3/bg.svg" alt="Bulgaria">
+    <img class="flag" height="20" src="img/flags/4x3/in.svg" alt="India">
+    <img class="flag" height="20" src="img/flags/4x3/au.svg" alt="Australia">
+    <img class="flag" height="20" src="img/flags/4x3/tr.svg" alt="Turkey">
+    <img class="flag" height="20" src="img/flags/4x3/nz.svg" alt="New Zealand">
+    <img class="flag" height="20" src="img/flags/4x3/lk.svg" alt="Sri Lanka">
+    <img class="flag" height="20" src="img/flags/4x3/my.svg" alt="Malaysia">
 
 <p><p>
 
@@ -90,7 +90,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
 <br />
 
-<i>Practice Makes Better - Five Times to Continuous Delivery</i><br />
+<i>Practice Makes Better - Five Times to Continuous Delivery</i><a href="https://dev.to/maaretp/practice-makes-better-5x-to-continuous-releases-9nh">[Talk turned article]</a><br />
 &nbsp; Keynote Speaker at Applitools Future of Testing (29.6.2021), Online<br />
 <br />
 
@@ -291,7 +291,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at Serverless Architecture Conference 2019 (15.-16.10.2019), Berlin, Germany<br />
 <br />
 
-<i>Mob Programming</i>
+<i>Mob Programming</i><br />
 &nbsp; Workshop facilitator at Agile Greece Summit (19.9.2019), Athens, Greece<br />
 &nbsp; Workshop facilitator at Testing Cup (10.6.2019), Poznan, Poland.<br />
 <br />
