--- a/index.html
+++ b/index.html
@@ -101,5 +101,9 @@
 <a href="https://www.facebook.com/groups/ohjelmistotestausry"><img class="causes" src="img/ohjelmistotestausry.png" alt="Software Testing Finland ry, non-profit"></a>
 <a href="https://mimmitkoodaa.ohjelmistoebusiness.fi"><img class="causes" src="img/mimmitkoodaa.png" alt="Mimmit Koodaa"></a>
 </div>
+
+<div class="speaking-container">
+</div>
+
 </body>
 </html>
