--- a/myTalks.html
+++ b/myTalks.html
@@ -59,14 +59,14 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>A customer organization, July 9th, 2021, Online.
-    <br>TALK: Software Testing Ask Anyone Anything</li>
     <li><a href="https://koulutus.almatalent.fi/testausautomaatio/">Alma Talent Testausautomaatio</a>, August 25th, 2021, Helsinki, Finland.
       <br>TALK: A Year in Test Automation Continuously Improving</li>
+    <li>tbd Conference, September 29th, 2021, Online.
+      <br>KEYNOTE: The Automationist's Gambit</li>
     <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
     <li>tbd Conference, October 18-21, 2021, Online.
-      <br>KEYNOTE: tbd</li>
+      <br>KEYNOTE: Hands-off Exploratory Testing - How to Manage Test at Scale</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
@@ -88,6 +88,12 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>The Automationist's Gambit</i><br />
 &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
+&nbsp; Keynote Speaker at a customer organization (??.9.2021), Online<br />
+<br />
+
+<i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
+&nbsp; Keynote Speaker at tbd (18-21.10.2021), Online<br />
+&nbsp; Keynote Speaker at QA Talks (4.6.2021), Online<br />
 <br />
 
 <i>Practice Makes Better - Five Times to Continuous Delivery</i><a href="https://dev.to/maaretp/practice-makes-better-5x-to-continuous-releases-9nh">[Talk turned article]</a><br />
@@ -96,10 +102,6 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>Testing Becoming Harder to Be Valuable</i><br />
 &nbsp; Keynote Speaker at Testing Voices (29.6.2021), Online<br />
-<br />
-
-<i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
-&nbsp; Keynote Speaker at QA Talks (4.6.2021), Online<br />
 <br />
 
 <i>Setting Up Website Hosted on Github</i><br />
@@ -161,6 +163,10 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>Contemporary Exploratory Testing Ask Anyone Anything</i><br />
 &nbsp; Trainer at Exploratory Testing Academy  (29.4.2021), Online<br />
+<br />
+
+<i>Software Testing Ask Anyone Anything</i><a href="https://twitter.com/maaretp/status/1413440131495759874?s=20">>[tweet]</a><br />
+&nbsp; Trainer at a customer organization  (9.7.2021), Online<br />
 <br />
 
 <i>How to Increase Your Impact</i><br />
