--- a/myTalks.html
+++ b/myTalks.html
@@ -61,7 +61,7 @@
   <ul>
     <li><a href="https://koulutus.almatalent.fi/testausautomaatio/">Alma Talent Testausautomaatio</a>, August 25th, 2021, Helsinki, Finland.
       <br>TALK: A Year in Test Automation Continuously Improving</li>
-    <li>tbd Conference, September 29th, 2021, Online.
+    <li>A Customer Organization's Conference, September 29th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
     <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
