--- a/myTalks.html
+++ b/myTalks.html
@@ -59,6 +59,8 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
+    <li>Agile 2021, July 22nd, 2021, Online.
+    <br>PANEL: Ensemble Testing </li>
     <li><a href="https://koulutus.almatalent.fi/testausautomaatio/">Alma Talent Testausautomaatio</a>, August 25th, 2021, Helsinki, Finland.
       <br>TALK: A Year in Test Automation Continuously Improving</li>
     <li>A Customer Organization's Conference, September 29th, 2021, Online.
