--- a/index.html
+++ b/index.html
@@ -103,6 +103,40 @@
 </div>
 
 <div class="speaking-container">
+<h4>Teaching and Sharing</h4>
+
+<div class="training-class">
+  <div class="training-alignment">
+  <a class="blacktext" href="https://maaretp.com/teach/">
+  <div class="circle"><div class="circle-txt">About</div></div>
+  </div>
+</div>
+
+<div class="training-class">
+  <div class="training-alignment">
+  <div class="circle-brochures"><div class="circle-txt">Courses</div></div>
+  </div>
+</div>
+
+<div class="training-class">
+  <div class="training-alignment">
+  <div class="circle-brochures"><div class="circle-txt">Workshops</div></div>
+  </div>
+</div>
+
+<div class="training-class">
+  <div class="training-alignment">
+  <div class="circle-brochures"><div class="circle-txt">Talks</div></div>
+  </div>
+</div>
+
+<div class="training-class">
+  <div class="training-alignment">
+  <a class="blacktext" href="https://maaretp.com/myTalks.html">
+  <div class="circle-history"><div class="circle-txt">History</div></div></a>
+  </div>
+</div>
+
 </div>
 
 </body>
