--- a/teach/index.html
+++ b/teach/index.html
@@ -22,7 +22,7 @@
 
 <body>
 <div class="container">
-<img class="headshot" src="../img/large-audience.png" alt="Maaret Pyhäjärvi, speaking at Agile Serbia">
+<img class="headshot" src="../img/large-audience.jpg" alt="Maaret Pyhäjärvi, speaking at Agile Serbia">
 <div class="name">Teaching - Talks, Conferences, Workshops, Trainings</div>
 <div class="social">
 <a href="mailto:maaret+website@iki.fi"><i class="fas fa-envelope-square"></i></a>
@@ -59,6 +59,7 @@ Since December 2019, I am on a traveling break as per requested by my teenage ki
 I'm happy to share my experiences in online conferences and deliver online workshops.<p>
 I have a full-time job at Vaisala as a principal test engineer and I teach limited amount
 of sessions on the side for my side company maaretp.<p>
+
 I invoice 2500 euros for a full day training, and 1500 euros (+ VAT) for a conference (keynote) session.
 I often waive my fees on request as long as this is also something all other speakers are doing.
 I don't pay to speak - that is - if there is travel involved, I always expect those paid.<p>
@@ -66,53 +67,6 @@ I don't participate in calls for proposals and consider invitation necessary. In
 organizers to consider all my talks on this site proposals you can consider,
 and I would be happy to deliver if I can make the schedule work. <p>
 
-<h4>Workshops and Trainings</h4>
-
-I specialize in teaching Exploratory Testing with an experiential approach
-using ensemble and pair testing. Drawing theory out with hands-on practice
-is a great way to learn.<p>
-
-<div class="training-class">
-  <div class="training-left">
-  <div class="circle"><div class="circle-txt">1 day</div></div>
-  </div>
-
-  <div class="training-right">
-    <div class="title">Exploratory Testing Foundations</div>
-    <div class="description">
-    Exploratory testing focuses on optimizing results and produces as one of its results better testing and testers. But what does that mean in practice? How do we test in a way that optimizes results and makes us better every day? <p>
-
-  This one day course is tailored to be delivered as a set of three two-hour sessions. In each session we start with a constraint, test in either pairs or groups, and reflect our lessons from the experiential learning. <p>
-
-  The course is facilitated and taught by an exploratory tester extraordinaire, Maaret Pyhäjärvi. Her day-to-day work is testing and helping others test at Vaisala for weather solutions using technologies from embedded software to cloud-native, and every now and then she takes a break from her work on discovering next steps in better testing with other organizations.<p>
-
-  Exploratory testing an application can turn into a very different experience depending on the constraint you work with. Each session, we start with the same application so you will know it better each session, but with a different constraint. <p>
-
-Session 1. Explore with intent <br>
-Session 2. Explore using test automation as documentation<br>
-Session 3. Explore to confirm customer reports<p>
-
-<b>Explore with intent</b><br>
-This session focuses on learning about self-management skills as the core of exploratory testing. Exploratory testing an application can turn into a very different experience depending on the constraint you work with. In this session, we give you a constraint of being very intentional about your actions and learning. When you need to think on multiple levels at once, how do you learn to do that more effectively?<p>
-
-<b>Explore using test automation as documentation</b><br>
-Exploratory testing an application can turn into a very different experience depending on the constraint you work with. In this session, we give you a constraint of using Robot Framework, and your task is to drive testing through automation. You don't need to know Robot Framework or Test Automation for taking part in this session. What changes for exploratory testing when we work under this constraint?<p>
-
-<b>Explore to confirm customer reports</b><br>
-In this session, we give you a constraint of user reported bugs, and your task is to confirm these reports on an application you have not used before. What are the skills required for working from vague reports to specific and what are you learning about an application if what you learn about it is what others have complained about?<p>
-
-    </div>
-  </div>
-</div>
-
-<div class="training-class">
-  <div class="training-left"></div>
-
-  <div class="training-right">
-    <div class="title"></div>
-    <div class="description"></div>
-  </div>
-</div>
 
 </body>
 </html>
