--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <div class="training-class">
   <div class="training-alignment">
   <a class="blacktext" href="https://maaretp.com/teach/">
-  <div class="circle"><div class="circle-txt">About</div></div>
+  <div class="circle"><div class="circle-txt">About</div></div></a>
   </div>
 </div>
 
