--- a/teach/index.html
+++ b/teach/index.html
@@ -64,8 +64,16 @@ I invoice 2500 euros for a full day training, and 1500 euros (+ VAT) for a confe
 I often waive my fees on request as long as this is also something all other speakers are doing.
 I don't pay to speak - that is - if there is travel involved, I always expect those paid.<p>
 I don't participate in calls for proposals and consider invitation necessary. In encourage conference
-organizers to consider all my talks on this site proposals you can consider,
+organizers to consider all my talks on this site as proposals you can consider,
 and I would be happy to deliver if I can make the schedule work. <p>
+
+<h4> My Sessions </h4>
+
+I teach courses (0.5 days -> 3 days), also split into 2 hour sessions which is
+works great for remote learning. My workshops are single-purpose sessions that
+stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
+
+My free public sessions are posted under <a href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy tito</a>.
 
 
 </body>
