--- a/teach/index.html
+++ b/teach/index.html
@@ -74,7 +74,7 @@ I teach courses (0.5 days -> 3 days), also split into 2 hour sessions which is
 works great for remote learning. My workshops are single-purpose sessions that
 stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
 
-My free public sessions are posted under <a href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy tito</a>.
+My free public sessions are posted under <a class="blacktext" href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy tito</a>.
 
 
 </body>
