--- a/index.html
+++ b/index.html
@@ -114,19 +114,22 @@
 
 <div class="training-class">
   <div class="training-alignment">
-  <div class="circle-brochures"><div class="circle-txt">Courses</div></div>
+  <a class="blacktext" href="#courses">
+  <div class="circle-brochures"><div class="circle-txt">Courses</div></div></a>
   </div>
 </div>
 
 <div class="training-class">
   <div class="training-alignment">
-  <div class="circle-brochures"><div class="circle-txt">Workshops</div></div>
+    <a class="blacktext" href="#workshops">
+  <div class="circle-brochures"><div class="circle-txt">Workshops</div></div></a>
   </div>
 </div>
 
 <div class="training-class">
   <div class="training-alignment">
-  <div class="circle-brochures"><div class="circle-txt">Talks</div></div>
+    <a class="blacktext" href="#talks">
+  <div class="circle-brochures"><div class="circle-txt">Talks</div></div></a>
   </div>
 </div>
 
