--- a/teach/index.html
+++ b/teach/index.html
@@ -23,7 +23,7 @@
 <body>
 <div class="container">
 <img class="headshot" src="../img/large-audience.jpg" alt="Maaret Pyhäjärvi, speaking at Agile Serbia">
-<div class="name">Teaching - Talks, Conferences, Workshops, Trainings</div>
+<div class="name">Teaching and Sharing</div>
 <div class="social">
 <a href="mailto:maaret+website@iki.fi"><i class="fas fa-envelope-square"></i></a>
 <a href="https://twitter.com/maaretp" target="_blank" rel="noopener noreferrer me" title="Twitter profile"><i class="fab fa-twitter-square"></i></a>
@@ -76,6 +76,15 @@ stand independent and are usually 1.5 - 2 hours. My talks are 30 - 60 minutes.
 
 My free public sessions are posted under <a class="blacktext" href="https://ti.to/exploratory-testing-academy">Exploratory Testing Academy tito</a>.
 
+<h3> Brochures </h3>
+
+Bio | Speaker Image
+
+<h4 id="courses"> Courses </h4>
+
+<h4 id="workshops"> Workshops </h4>
+
+<h4 id="talks"> Talks </h4>
 
 </body>
 </html>
