Linking bio and speaker image

--- a/teach/index.html
+++ b/teach/index.html
@@ -78,7 +78,8 @@ My free public sessions are posted under <a class="blacktext" href="https://ti.t
 
 <h3> Brochures </h3>
 
-Bio | Speaker Image
+<a class="blacktext" href="https://docs.google.com/document/d/1CJBUTPd7MKY95GayHsKJAm5mNLfd7fIfj5kASowOOZk/edit?usp=sharing">Bio</a>
+| <a class="blacktext" href="https://drive.google.com/file/d/1fu7ZyVgJsS3QeOCbMfENDJrbibjNSCsW/view?usp=sharing">Speaker Image</a>
 
 <h4 id="courses"> Courses </h4>
 
