--- a/teach/index.html
+++ b/teach/index.html
@@ -86,7 +86,7 @@ My free public sessions are posted under <a class="blacktext" href="https://ti.t
 
 <a class="blacktext" href="https://docs.google.com/document/d/1CRlHmNY_aPiZS479a5tP6-Uc-OWeqe6-lN0jwhcFLOQ/edit?usp=sharing">Ensemble Testing (1 day)</a><br>
 <a class="blacktext" href="https://docs.google.com/document/d/1PYCADefWRYfqrKdp-hclaQduiGFFtUVGmUSTNtAOIP8/edit?usp=sharing">Exploratory Testing Foundations (1 day)</a> <br>
-<a class="blacktext" href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a><br>
+<a class="blacktext" href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a><br>
 
 
 <h4 id="workshops"> Workshops </h4>
