--- a/teach/index.html
+++ b/teach/index.html
@@ -87,15 +87,18 @@ My free public sessions are posted under <a class="blacktext" href="https://ti.t
 <a class="blacktext" href="https://docs.google.com/document/d/1CRlHmNY_aPiZS479a5tP6-Uc-OWeqe6-lN0jwhcFLOQ/edit?usp=sharing">Ensemble Testing (1 day)</a><br>
 <a class="blacktext" href="https://docs.google.com/document/d/1PYCADefWRYfqrKdp-hclaQduiGFFtUVGmUSTNtAOIP8/edit?usp=sharing">Exploratory Testing Foundations (1 day)</a> <br>
 <a class="blacktext" href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a><br>
+<a class="blacktext" href="https://docs.google.com/document/d/1sOPvR5yiHkH5zgagKAiM1TpmY94pIMMZl2GpIpQ1fMo/edit?usp=sharing">Exploratory Testing on Computer Interfaces (APIs)</a>
 Test Automation Sampler (1 day)<br>
 Contemporary Test Management (1 day)<br>
+Exploratory Testing Applied<br>
 
 
 <h4 id="workshops"> Workshops </h4>
 
 Test a Text Field, Test a Button (99 minutes)<br>
 Incremental Test Planning (99 minutes)<br>
-Test Coverages: Code, Requirements, Risks<br>
+Test Coverages: Code, Requirements, Risks (99 minutes)<br>
+Mock the Response to Target Testing (99 minutes)<br>
 Ask Anyone Anything (99 minutes)<br>
 Visual Test Retrospective (99 minutes)<br>
 Test Strategy Visualization (99 minutes)<br>
