--- a/teach/index.html
+++ b/teach/index.html
@@ -95,10 +95,13 @@ Exploratory Testing Applied<br>
 
 <h4 id="workshops"> Workshops </h4>
 
+<a class="blacktext" href="https://docs.google.com/document/d/1iI3-rBGKf3NlzH0CqGUsbcJIC-9UWS3e80OrAKhxcm4/edit?usp=sharing">Exploratory Testing with a Constraint: Automation (99 minutes)</a>
+<a class="blacktext" href="https://docs.google.com/document/d/1zHAIX-m77jBIyr67JKmpsWuIduVtYefsCxPpuWhgnzY/edit?usp=sharing">Exploratory Testing with a Constraint: Unconfirmed issues (99 minutes)</a>
 Test a Text Field, Test a Button (99 minutes)<br>
 Incremental Test Planning (99 minutes)<br>
 Test Coverages: Code, Requirements, Risks (99 minutes)<br>
 Mock the Response to Target Testing (99 minutes)<br>
+Ensemble Testing Roleplay (99 minutes)<br>
 Ask Anyone Anything (99 minutes)<br>
 Visual Test Retrospective (99 minutes)<br>
 Test Strategy Visualization (99 minutes)<br>
