--- a/teach/index.html
+++ b/teach/index.html
@@ -87,22 +87,27 @@ My free public sessions are posted under <a class="blacktext" href="https://ti.t
 <a class="blacktext" href="https://docs.google.com/document/d/1CRlHmNY_aPiZS479a5tP6-Uc-OWeqe6-lN0jwhcFLOQ/edit?usp=sharing">Ensemble Testing (1 day)</a><br>
 <a class="blacktext" href="https://docs.google.com/document/d/1PYCADefWRYfqrKdp-hclaQduiGFFtUVGmUSTNtAOIP8/edit?usp=sharing">Exploratory Testing Foundations (1 day)</a> <br>
 <a class="blacktext" href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a><br>
-<a class="blacktext" href="https://docs.google.com/document/d/1sOPvR5yiHkH5zgagKAiM1TpmY94pIMMZl2GpIpQ1fMo/edit?usp=sharing">Exploratory Testing on Computer Interfaces (APIs)</a>
+<a class="blacktext" href="https://docs.google.com/document/d/1sOPvR5yiHkH5zgagKAiM1TpmY94pIMMZl2GpIpQ1fMo/edit?usp=sharing">Exploratory Testing on Computer Interfaces (APIs)</a><br>
+<a class="blacktext" href="https://docs.google.com/document/d/18SEGRpCm2fB-lQpIlm7m1l2r96mE1foGypBHh-FBm1M/edit?usp=sharing">Diversifying Test Approaches using Constraints (1 day)</a><br>
+<a class="blacktext"href="https://docs.google.com/document/d/1B2mCP7Pm9ffVuJ838Dm85-SyebqkcxDeUgeobkLahhw/edit?usp=sharing">Exploratory Testing Essentials (1/2 day)</a><br>
 Test Automation Sampler (1 day)<br>
 Contemporary Test Management (1 day)<br>
-Exploratory Testing Applied<br>
+Exploratory Testing Applied (2 days)<br>
+Software and System Testing Foundations (1 day)<br>
 
 
 <h4 id="workshops"> Workshops </h4>
 
-<a class="blacktext" href="https://docs.google.com/document/d/1iI3-rBGKf3NlzH0CqGUsbcJIC-9UWS3e80OrAKhxcm4/edit?usp=sharing">Exploratory Testing with a Constraint: Automation (99 minutes)</a>
-<a class="blacktext" href="https://docs.google.com/document/d/1zHAIX-m77jBIyr67JKmpsWuIduVtYefsCxPpuWhgnzY/edit?usp=sharing">Exploratory Testing with a Constraint: Unconfirmed issues (99 minutes)</a>
-Test a Text Field, Test a Button (99 minutes)<br>
+<a class="blacktext" href="https://docs.google.com/document/d/1iI3-rBGKf3NlzH0CqGUsbcJIC-9UWS3e80OrAKhxcm4/edit?usp=sharing">Exploratory Testing with a Constraint: Automation (99 minutes)</a><br>
+<a class="blacktext" href="https://docs.google.com/document/d/1zHAIX-m77jBIyr67JKmpsWuIduVtYefsCxPpuWhgnzY/edit?usp=sharing">Exploratory Testing with a Constraint: Unconfirmed issues (99 minutes)</a><br>
+<a class="blacktext" href="https://docs.google.com/document/d/1tjiMGzoDd-pfhMp2ZzrI-q4zHYSxvaHc7Wg_2oxeMfo/edit?usp=sharing">Exploratory Testing with a Constraint: Self-Management (99 minutes)</a><br>
+<a class="blacktext" href="https://docs.google.com/document/d/1o5QnEit5E-BfEyZptWGoz214an2dR14eCW2Qi64v3fo/edit?usp=sharing">Test a Text Field, Test a Button (99 minutes)</a><br>
 Incremental Test Planning (99 minutes)<br>
 Test Coverages: Code, Requirements, Risks (99 minutes)<br>
+Exploratory Testing an API (99 minutes)<br>
 Mock the Response to Target Testing (99 minutes)<br>
 Ensemble Testing Roleplay (99 minutes)<br>
-Ask Anyone Anything (99 minutes)<br>
+<a class="blacktext" href="https://docs.google.com/document/d/1pufTLEjpsC-6WX_VH1L5PHK1Utusk4uolc8dR9iZnf8/edit?usp=sharing">Contemporary Exploratory Testing Ask Anyone Anything (99 minutes)</a><br>
 Visual Test Retrospective (99 minutes)<br>
 Test Strategy Visualization (99 minutes)<br>
 Becoming Public Speaker (99 minutes)<br>
