--- a/teach/index.html
+++ b/teach/index.html
@@ -89,12 +89,12 @@ My free public sessions are posted under <a class="blacktext" href="https://ti.t
 <a class="blacktext" href="https://docs.google.com/document/d/1QR_H0ERz0sHLouiLLf37yVrZ4fewsrvZMHWKZZVgETw/edit?usp=sharing">Exploratory Testing Work Course (1 day)</a> | Exploratory Testing Work Course (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1KsJJmikGQZfzY5MoAWJBEu_gsC3HLq4uubrTWsfuoSQ/edit?usp=sharing">Tutkivan Testauksen työkurssi (2 päivää)</a><br>
 <a class="blacktext" href="https://docs.google.com/document/d/1sOPvR5yiHkH5zgagKAiM1TpmY94pIMMZl2GpIpQ1fMo/edit?usp=sharing">Exploratory Testing on Computer Interfaces (APIs)</a><br>
 <a class="blacktext" href="https://docs.google.com/document/d/18SEGRpCm2fB-lQpIlm7m1l2r96mE1foGypBHh-FBm1M/edit?usp=sharing">Diversifying Test Approaches using Constraints (1 day)</a><br>
-<a class="blacktext"href="https://docs.google.com/document/d/1B2mCP7Pm9ffVuJ838Dm85-SyebqkcxDeUgeobkLahhw/edit?usp=sharing">Exploratory Testing Essentials (1/2 day)</a><br>
+<a class="blacktext" href="https://docs.google.com/document/d/1B2mCP7Pm9ffVuJ838Dm85-SyebqkcxDeUgeobkLahhw/edit?usp=sharing">Exploratory Testing Essentials (1/2 day)</a><br>
 Test Automation Sampler (1 day)<br>
 Contemporary Test Management (1 day)<br>
 Exploratory Testing Applied (2 days)<br>
 Software and System Testing Foundations (1 day)<br>
-
+Test Design (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1ro9yeeIRh0wrchOFOTPLek63WiH8tNbz4Qo7w-pZVVQ/edit?usp=sharing">Testitapausten suunnittelu (2 päivää)</a><br>
 
 <h4 id="workshops"> Workshops </h4>
 
