--- a/teach/index.html
+++ b/teach/index.html
@@ -95,6 +95,7 @@ Contemporary Test Management (1 day)<br>
 Exploratory Testing Applied (2 days)<br>
 Software and System Testing Foundations (1 day)<br>
 Test Design (2 days) | <a class="blacktext" href="https://docs.google.com/document/d/1ro9yeeIRh0wrchOFOTPLek63WiH8tNbz4Qo7w-pZVVQ/edit?usp=sharing">Testitapausten suunnittelu (2 päivää)</a><br>
+Test Activity Sampler (1 day)<br>
 
 <h4 id="workshops"> Workshops </h4>
 
