--- a/myTalks.html
+++ b/myTalks.html
@@ -59,8 +59,6 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>Agile 2021, July 22nd, 2021, Online.
-    <br>PANEL: Ensemble Testing </li>
     <li><a href="https://koulutus.almatalent.fi/testausautomaatio/">Alma Talent Testausautomaatio</a>, August 25th, 2021, Helsinki, Finland.
       <br>TALK: A Year in Test Automation Continuously Improving</li>
     <li>A Customer Organization's Conference, September 29th, 2021, Online.
@@ -69,6 +67,8 @@
       <br>KEYNOTE: The Automationist's Gambit</li>
     <li>tbd Conference, October 18-21, 2021, Online.
       <br>KEYNOTE: Hands-off Exploratory Testing - How to Manage Test at Scale</li>
+    <li> TestFlix, October 23-24, 2021, Online.
+      <br>TALK: Tester's Takeaways from AI/ML product</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
