--- a/teach/index.html
+++ b/teach/index.html
@@ -117,6 +117,7 @@ Becoming Public Speaker (99 minutes)<br>
 
 Test Automationist's Gambit<br>
 Breaking Illusions with Testing<br>
+Practice Makes Better - 5x to Continuous Delivery<br>
 ...many more.<br>
 
 </body>
