--- a/index.html
+++ b/index.html
@@ -115,21 +115,21 @@
 
 <div class="training-class">
   <div class="training-alignment">
-  <a class="blacktext" href="#courses">
+  <a class="blacktext" href="https://maaretp.com/teach/inxex.html#courses">
   <div class="circle-brochures"><div class="circle-txt">Courses</div></div></a>
   </div>
 </div>
 
 <div class="training-class">
   <div class="training-alignment">
-    <a class="blacktext" href="#workshops">
+    <a class="blacktext" href="https://maaretp.com/teach/inxex.html#workshops">
   <div class="circle-brochures"><div class="circle-txt">Workshops</div></div></a>
   </div>
 </div>
 
 <div class="training-class">
   <div class="training-alignment">
-    <a class="blacktext" href="#talks">
+    <a class="blacktext" href="https://maaretp.com/teach/inxex.html#talks">
   <div class="circle-brochures"><div class="circle-txt">Talks</div></div></a>
   </div>
 </div>
