--- a/myTalks.html
+++ b/myTalks.html
@@ -90,7 +90,7 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>The Automationist's Gambit</i><br />
 &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
-&nbsp; Keynote Speaker at a customer organization (??.9.2021), Online<br />
+&nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
 <br />
 
 <i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
