--- a/myTalks.html
+++ b/myTalks.html
@@ -59,16 +59,18 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li><a href="https://koulutus.almatalent.fi/testausautomaatio/">Alma Talent Testausautomaatio</a>, August 25th, 2021, Helsinki, Finland.
-      <br>TALK: A Year in Test Automation Continuously Improving</li>
+    <li>Appium Lite Conference, September 2nd, 2021, Online.
+      <br>Many Hats to Make a Tester</li>
     <li>A Customer Organization's Conference, September 29th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
     <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
-    <li>tbd Conference, October 18-21, 2021, Online.
+    <li>HUSTEF Conference, October 18-21, 2021, Online.
       <br>KEYNOTE: Hands-off Exploratory Testing - How to Manage Test at Scale</li>
     <li> TestFlix, October 23-24, 2021, Online.
       <br>TALK: Tester's Takeaways from AI/ML product</li>
+    <li>A Customer Organization's Event, November 26th, 2021, Online.
+      <br>TALK: It's More Complicated than THAT</li>
   </ul>
 
 </p>I'm taking a break from traveling to conferences after I reached 400 sessions Dec 13th 2019,
@@ -90,12 +92,20 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>The Automationist's Gambit</i><br />
 &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
-&nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
+&nbsp; Keynote Speaker at a customer organization (??.9.2021), Online<br />
 <br />
 
 <i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
-&nbsp; Keynote Speaker at tbd (18-21.10.2021), Online<br />
+&nbsp; Keynote Speaker at HUSTEF Conference (18-21.10.2021), Online<br />
 &nbsp; Keynote Speaker at QA Talks (4.6.2021), Online<br />
+<br />
+
+<i>Many Hats to Make a Tester</i><br />
+&nbsp; Keynote Speaker at Appium Lite Conference (2.9.2021), Online<br />
+<br />
+
+<i>It's More Complicated than THAT</i><br />
+&nbsp; Speaker at a customer organization (26.11.2021), Online<br />
 <br />
 
 <i>Practice Makes Better - 5x to Continuous Delivery</i><a href="https://applitools.com/event/practice-makes-better-5-times-to-continuous-delivery/">[Talk (registration wall)]</a><a href="https://dev.to/maaretp/practice-makes-better-5x-to-continuous-releases-9nh">[Talk turned article]</a><br />
