--- a/myTalks.html
+++ b/myTalks.html
@@ -60,15 +60,19 @@
 
   <ul>
     <li>Appium Lite Conference, September 2nd, 2021, Online.
-      <br>Many Hats to Make a Tester</li>
+      <br>KEYNOTE: Many Hats to Make a Tester</li>
+    <li>World Quality Summit, September 8th, 2021, Online.
+      <br>TALK: To be Defined</li>
     <li>A Customer Organization's Conference, September 29th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
     <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
     <li>HUSTEF Conference, October 18-21, 2021, Online.
       <br>KEYNOTE: Hands-off Exploratory Testing - How to Manage Test at Scale</li>
-    <li> TestFlix, October 23-24, 2021, Online.
+    <li>TestFlix, October 23-24, 2021, Online.
       <br>TALK: Tester's Takeaways from AI/ML product</li>
+    <li>TestJSConf, November 18-19, 2021, Online.
+      <br>TALK: Go Find What We May Have Missed! </li>
     <li>A Customer Organization's Event, November 26th, 2021, Online.
       <br>TALK: It's More Complicated than THAT</li>
   </ul>
@@ -106,6 +110,10 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 
 <i>It's More Complicated than THAT</i><br />
 &nbsp; Speaker at a customer organization (26.11.2021), Online<br />
+<br />
+
+<i>Go Find What We May Have Missed"</i><br />
+&nbsp; Speaker at a testjsconf (18-19.11.2021), Online<br />
 <br />
 
 <i>Practice Makes Better - 5x to Continuous Delivery</i><a href="https://applitools.com/event/practice-makes-better-5-times-to-continuous-delivery/">[Talk (registration wall)]</a><a href="https://dev.to/maaretp/practice-makes-better-5x-to-continuous-releases-9nh">[Talk turned article]</a><br />
