--- a/myTalks.html
+++ b/myTalks.html
@@ -62,7 +62,9 @@
     <li>Appium Lite Conference, September 2nd, 2021, Online.
       <br>KEYNOTE: Many Hats to Make a Tester</li>
     <li>World Quality Summit, September 8th, 2021, Online.
-      <br>TALK: To be Defined</li>
+      <br>KEYNOTE: To be Defined</li>
+    <li>QAstion Time Meetup, September 15th, 2021, Online.
+      <br>A Year in Test Automation</li>
     <li>A Customer Organization's Conference, September 29th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
     <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
@@ -112,8 +114,12 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at a customer organization (26.11.2021), Online<br />
 <br />
 
-<i>Go Find What We May Have Missed"</i><br />
+<i>Go Find What We May Have Missed</i><br />
 &nbsp; Speaker at a testjsconf (18-19.11.2021), Online<br />
+<br />
+
+<i>A Year in Test Automation</i><br />
+&nbsp; Speaker at a QAstiontime meetup (15.9.2021), Online<br />
 <br />
 
 <i>Practice Makes Better - 5x to Continuous Delivery</i><a href="https://applitools.com/event/practice-makes-better-5-times-to-continuous-delivery/">[Talk (registration wall)]</a><a href="https://dev.to/maaretp/practice-makes-better-5x-to-continuous-releases-9nh">[Talk turned article]</a><br />
