--- a/myTalks.html
+++ b/myTalks.html
@@ -64,7 +64,7 @@
     <li>World Quality Summit, September 8th, 2021, Online.
       <br>KEYNOTE: To be Defined</li>
     <li>QAstion Time Meetup, September 15th, 2021, Online.
-      <br>A Year in Test Automation</li>
+      <br>TALK: A Year in Test Automation</li>
     <li>A Customer Organization's Conference, September 29th, 2021, Online.
       <br>KEYNOTE: The Automationist's Gambit</li>
     <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
