--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
   <img class="flag" height="20" src="img/flags/4x3/lk.svg" alt="Sri Lanka">
   <img class="flag" height="20" src="img/flags/4x3/my.svg" alt="Malaysia">
   <br><a class="blacktext" href="https://maaretp.com/myTalks.html">[All Delivered Talks, Workshops and Trainings]</a>
+  <a class="blacktext" href="https://maaretp.com/teach/">  [Courses and Workshops]</a>
 
 </div>
 
@@ -103,6 +104,7 @@
 <a href="https://mimmitkoodaa.ohjelmistoebusiness.fi"><img class="causes" src="img/mimmitkoodaa.png" alt="Mimmit Koodaa"></a>
 </div>
 
+<!--
 <div class="speaking-container">
 <h4>Teaching and Sharing</h4>
 
@@ -115,21 +117,21 @@
 
 <div class="training-class">
   <div class="training-alignment">
-  <a class="blacktext" href="https://maaretp.com/teach/inxex.html#courses">
+  <a class="blacktext" href="https://maaretp.com/teach/index.html#courses">
   <div class="circle-brochures"><div class="circle-txt">Courses</div></div></a>
   </div>
 </div>
 
 <div class="training-class">
   <div class="training-alignment">
-    <a class="blacktext" href="https://maaretp.com/teach/inxex.html#workshops">
+    <a class="blacktext" href="https://maaretp.com/teach/index.html#workshops">
   <div class="circle-brochures"><div class="circle-txt">Workshops</div></div></a>
   </div>
 </div>
 
 <div class="training-class">
   <div class="training-alignment">
-    <a class="blacktext" href="https://maaretp.com/teach/inxex.html#talks">
+    <a class="blacktext" href="https://maaretp.com/teach/index.html#talks">
   <div class="circle-brochures"><div class="circle-txt">Talks</div></div></a>
   </div>
 </div>
@@ -142,6 +144,7 @@
 </div>
 
 </div>
+-->
 
 </body>
 </html>
