--- a/ETI.html
+++ b/ETI.html
@@ -4,6 +4,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta charset="utf-8">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+
+
   <title>Exploratory Testing Index | Maaret Pyhäjärvi</title>
   <meta property="og:title" content="Exploratory Testing Index">
   <meta property="og:url" content="https://maaretp.com/ETI.html">
@@ -12,34 +17,26 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
 
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@maaretp" />
+  <meta name="twitter:title" content="Exploratory Testing Index" />
+  <meta name="twitter:image" content="https://maaretp.com/pics/ETbook.png" />
+  <meta name="twitter:image:alt" content="Exploratory Testing book cover image" />
+
+
   <meta name="twitter:creator" content="@maaretp">
   <meta name="author" content="Maaret Pyhäjärvi">
 
-  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
 </head>
 
 <body>
 
-  <nav class="mainnav">
-    	<ul>
-    		<li class="selected">
-    			<a href="index.html">Home</a>
-    		</li>
-    		<li>
-    			<a href="myArticles.html">Published Material</a>
-    		</li>
-    		<li>
-    			<a href="myTalks.html">My Talks, Workshops and Trainings</a>
-    		</li>
-    	</ul>
-  </nav>
-
 <h1>Exploratory Testing Index</h1>
 
 <table>
 <td>
-  <a href="https://leanpub.com/exploratorytesting"><img src="img/et_cover_small.png"></a>
+  <a href="https://leanpub.com/exploratorytesting"><img src="img/ETbook.png"></a>
 </td>
 <td>
 <i><b>This index is a thematic analysis of my writing around exploratory testing.</i></b><p>
