--- a/ETI.html
+++ b/ETI.html
@@ -36,7 +36,7 @@
 
 <table>
 <td>
-  <a href="https://leanpub.com/exploratorytesting"><img src="img/ETbook.png"></a>
+  <a href="https://leanpub.com/exploratorytesting"><img width="200px" src="img/ETbook.png"></a>
 </td>
 <td>
 <i><b>This index is a thematic analysis of my writing around exploratory testing.</i></b><p>
