--- a/ETI.html
+++ b/ETI.html
@@ -27,7 +27,7 @@
   <meta name="twitter:creator" content="@maaretp">
   <meta name="author" content="Maaret Pyhäjärvi">
 
-  <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
+  <link type="text/css" rel="stylesheet" href="style2.css" media="all" />
 </head>
 
 <body>
