--- a/myArticles.html
+++ b/myArticles.html
@@ -15,8 +15,10 @@
   <meta name="twitter:creator" content="@maaretp">
   <meta name="author" content="Maaret Pyhäjärvi">
 
-  <link href="https://fonts.googleapis.com/css?family=Lato|Lobster" rel="stylesheet">
-  <link type="text/css" rel="stylesheet" href="new_styles.css" media="all" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="style2.css" media="all" />
 </head>
 
 <body>
