Fix awards banner

--- a/myArticles.html
+++ b/myArticles.html
@@ -145,7 +145,7 @@
   <li>EuroSTAR Testing Excellence Award 2020</li>
 </ul>
 
-<img src="img/banner_awards.jpg">
+<img src="img/BannerAwards.jpg">
 
 </body>
 
