--- a/ETI.html
+++ b/ETI.html
@@ -20,7 +20,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@maaretp" />
   <meta name="twitter:title" content="Exploratory Testing Index" />
-  <meta name="twitter:image" content="https://maaretp.com/pics/ETbook.png" />
+  <meta name="twitter:image" content="https://maaretp.com/img/ETbook.png" />
   <meta name="twitter:image:alt" content="Exploratory Testing book cover image" />
 
 
