--- a/myTalks.html
+++ b/myTalks.html
@@ -61,20 +61,14 @@
   <h2>UPCOMING CONFERENCES & MEETUPS & WEBINARS & TRAININGS</h2>
 
   <ul>
-    <li>Appium Lite Conference, September 2nd, 2021, Online.
-      <br>KEYNOTE: Many Hats to Make a Tester</li>
-    <li>World Quality Summit, September 8th, 2021, Online.
-      <br>KEYNOTE: To be Defined</li>
-    <li>QAstion Time Meetup, September 15th, 2021, Online.
-      <br>TALK: A Year in Test Automation</li>
-    <li>A Customer Organization's Conference, September 29th, 2021, Online.
-      <br>KEYNOTE: The Automationist's Gambit</li>
-    <li>EuroSTAR Testing Conference, September 30th, 2021, Online.
-      <br>KEYNOTE: The Automationist's Gambit</li>
     <li>HUSTEF Conference, October 18-21, 2021, Online.
       <br>KEYNOTE: Hands-off Exploratory Testing - How to Manage Test at Scale</li>
     <li>TestFlix, October 23-24, 2021, Online.
-      <br>TALK: Tester's Takeaways from AI/ML product</li>
+      <br>TALK: Better Ideas at Test Design</li>
+    <li>Ministry of Testing Sarajevo Meetup, October 27th, Online.
+      <br>TALK: How to Get Better at Exploratory Testing</li>
+    <li>A Customer Organization's Event, October 28th, Online.
+      <br>TALK: Automationist's Gambit</li>
     <li>TestJSConf, November 18-19, 2021, Online.
       <br>TALK: Go Find What We May Have Missed! </li>
     <li>A Customer Organization's Event, November 26th, 2021, Online.
@@ -99,13 +93,26 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 <div style="text-align: left;">
 
 <i>The Automationist's Gambit</i><br />
+&nbsp; Speaker at a customer organization (28.10.2021), Online<br />
 &nbsp; Keynote Speaker at EuroSTAR (30.9.2021), Online<br />
-&nbsp; Keynote Speaker at a customer organization (??.9.2021), Online<br />
+&nbsp; Keynote Speaker at a customer organization (29.9.2021), Online<br />
 <br />
 
 <i>Hands-off Exploratory Testing - How to Manage Test at Scale</i><br />
 &nbsp; Keynote Speaker at HUSTEF Conference (18-21.10.2021), Online<br />
 &nbsp; Keynote Speaker at QA Talks (4.6.2021), Online<br />
+<br />
+
+<i>Practice Makes Better - 5x to Continuous Delivery</i><a href="https://applitools.com/event/practice-makes-better-5-times-to-continuous-delivery/">[Talk (registration wall)]</a><a href="https://dev.to/maaretp/practice-makes-better-5x-to-continuous-releases-9nh">[Talk turned article]</a><br />
+&nbsp; Keynote Speaker at Applitools Future of Testing (29.6.2021), Online<br />
+<br />
+
+<i>Testing Becoming Harder to Be Valuable</i><br />
+&nbsp; Keynote Speaker at Testing Voices (29.6.2021), Online<br />
+<br />
+
+<i>Opportunity Cost: Balancing Now and Future</i><br />
+&nbsp; Keynote Speaker at World Quality Summit (8.9.2021), Online<br />
 <br />
 
 <i>Many Hats to Make a Tester</i><br />
@@ -116,20 +123,16 @@ happy to appear in podcasts, webinars, remote conferences and anything that requ
 &nbsp; Speaker at a customer organization (26.11.2021), Online<br />
 <br />
 
+<i>How to Get Better at Exploratory Testing</i><br />
+&nbsp; Speaker at a customer organization (27.10.2021), Online<br />
+<br />
+
 <i>Go Find What We May Have Missed</i><br />
 &nbsp; Speaker at a testjsconf (18-19.11.2021), Online<br />
 <br />
 
 <i>A Year in Test Automation</i><br />
 &nbsp; Speaker at a QAstiontime meetup (15.9.2021), Online<br />
-<br />
-
-<i>Practice Makes Better - 5x to Continuous Delivery</i><a href="https://applitools.com/event/practice-makes-better-5-times-to-continuous-delivery/">[Talk (registration wall)]</a><a href="https://dev.to/maaretp/practice-makes-better-5x-to-continuous-releases-9nh">[Talk turned article]</a><br />
-&nbsp; Keynote Speaker at Applitools Future of Testing (29.6.2021), Online<br />
-<br />
-
-<i>Testing Becoming Harder to Be Valuable</i><br />
-&nbsp; Keynote Speaker at Testing Voices (29.6.2021), Online<br />
 <br />
 
 <i>Setting Up Website Hosted on Github</i><br />
